--- a/rx_digiprint_app/rx_digiprint_app/rx_digiprint_app.Droid/Properties/AndroidManifest.xml
+++ b/rx_digiprint_app/rx_digiprint_app/rx_digiprint_app.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="DigiPrint.DigiPrint" android:installLocation="preferExternal" android:versionCode="1" android:versionName="Pre Release">
-	<uses-sdk android:minSdkVersion="25" android:targetSdkVersion="25" />
+	<uses-sdk android:minSdkVersion="25" android:targetSdkVersion="26" />
 	<uses-permission android:name="android.permission.BLUETOOTH" />
 	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 	<uses-permission android:name="android.permission.CAMERA" />
@@ -10,5 +10,6 @@
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 	<application android:label="DigiPrint" android:icon="@drawable/icon"></application>
 </manifest>
