--- a/rx_common_lib/Makefile
+++ b/rx_common_lib/Makefile
@@ -36,7 +36,7 @@ error:
 endif
 
 SOURCEFILES := ../Externals/mbedtls-1.3.10/library/sha1.c bmp.c fastlz.c hex2bin.c rx_bitmap.c rx_common.c rx_crc.c rx_csv.c rx_def.c rx_embrip_def.c rx_fifo.c rx_fpga.c rx_hash.c rx_error.c rx_file.c rx_led.c rx_list.c rx_log.c rx_mac_address.c rx_mem.c rx_setup_file.cpp rx_setup_ink.c rx_sok.c rx_system.c rx_term.c rx_threads.c rx_trace.c rx_xml.cpp
-EXTERNAL_LIBS := 
+EXTERNAL_LIBS := ../Externals/TinyXML/$(BINARYDIR)/TinyXML.a
 EXTERNAL_LIBS_COPIED := $(foreach lib, $(EXTERNAL_LIBS),$(BINARYDIR)/$(notdir $(lib)))
 
 CFLAGS += $(COMMONFLAGS)
@@ -145,4 +145,7 @@ $(BINARYDIR)/%.o : %.s $(all_make_files) |$(BINARYDIR)
 
 $(BINARYDIR)/sha1.o : ../Externals/mbedtls-1.3.10/library/sha1.c $(all_make_files) |$(BINARYDIR)
 	$(CC) $(CFLAGS) -c $< -o $@ -MD -MF $(@:.o=.dep)
+
+$(BINARYDIR)/TinyXML.a : ../Externals/TinyXML/$(BINARYDIR)/TinyXML.a
+	$(CP) ../Externals/TinyXML/$(BINARYDIR)/TinyXML.a $(BINARYDIR)/TinyXML.a
 
