mag_7152 code - update FPGA register files to version 1762 - PrintQueue improvements - digiprintgui new config: Debug-Remote|x64 - traces for more info concerning FIFO empty bug (PrintDone Warnings ...) - traces for UDP0/1 dis- and reconnection - improve PURGE (for TX80X machines - doc Roller Correction - doc altera FIFO

--- a/rx_digiprint_gui/rx_digiprint_gui.csproj
+++ b/rx_digiprint_gui/rx_digiprint_gui.csproj
@@ -337,6 +337,7 @@
     <Compile Include="Converters\Or_Converter.cs" />
     <Compile Include="Converters\PagesVisible_Converter.cs" />
     <Compile Include="Converters\PlcLogState_Converter.cs" />
+    <Compile Include="Converters\PrintQueueCheckVisible_Converter.cs" />
     <Compile Include="Converters\PuttyVisible_Converter.cs" />
     <Compile Include="Converters\RotateRect_Converter.cs" />
     <Compile Include="Converters\ScanLengt_Converter.cs" />
