--- a/rx_digiprint_gui/rx_digiprint_gui.csproj
+++ b/rx_digiprint_gui/rx_digiprint_gui.csproj
@@ -1537,7 +1537,7 @@
     <Resource Include="Resources\Bitmaps\Printer0.ico" />
     <Resource Include="Resources\Bitmaps\Printer3.ico" />
     <Resource Include="Resources\Bitmaps\Printer4.ico" />
-    <Resource Include="Resources\Bitmaps\MiniLabel\MiniLabel.JPG" />
+    <Resource Include="Resources\Bitmaps\LB701UV\LB701UV.jpg" />
     <Resource Include="Resources\Bitmaps\Tex\Fashion-HO.bmp" />
     <Resource Include="Resources\Bitmaps\Clean.ico" />
     <Resource Include="Resources\Bitmaps\OFF.ico" />
