--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -1,8 +1,10 @@
 stages:
-  - build
+  - build1
+  - build2
+  - build3
   
 buildnios:
-  stage: build
+  stage: build1
   script:
   - echo "build nios Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
@@ -10,7 +12,7 @@ buildnios:
   - pushes
   
 buildkeil:
-  stage: build
+  stage: build3
   script:
   - echo "build keil Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat keil -no-pause
@@ -18,7 +20,7 @@ buildkeil:
   - pushes
   
 buildother:
-  stage: build
+  stage: build1
   script:
   - echo "build other Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat other -no-pause
