--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -1,10 +1,8 @@
 stages:
-  - build1
-  - build2
-  - build3
+  - build
   
 buildnios:
-  stage: build2
+  stage: build
   script:
   - echo "build nios Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
@@ -12,7 +10,7 @@ buildnios:
   - pushes
   
 buildkeil:
-  stage: build3
+  stage: build
   script:
   - echo "build keil Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat keil -no-pause
@@ -20,7 +18,7 @@ buildkeil:
   - pushes
   
 buildother:
-  stage: build1
+  stage: build
   script:
   - echo "build other Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat other -no-pause
