--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -5,6 +5,9 @@ stages:
   
 buildnios:
   stage: build2
+  variables:
+    GET_SOURCES_ATTEMPTS: "3"
+    GIT_STRATEGY: clone
   script:
   - echo "build nios Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
@@ -13,6 +16,9 @@ buildnios:
   
 buildkeil:
   stage: build3
+  variables:
+    GET_SOURCES_ATTEMPTS: "3"
+    GIT_STRATEGY: clone
   script:
   - echo "build keil Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat keil -no-pause
@@ -21,6 +27,9 @@ buildkeil:
   
 buildother:
   stage: build1
+  variables:
+    GET_SOURCES_ATTEMPTS: "3"
+    GIT_STRATEGY: clone
   script:
   - echo "build other Mouvent Printer"
   - automated_build/msbuild_vsprojects.bat other -no-pause
