--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -1,34 +1,77 @@
 stages:
   - build
-  
+  - artifacts
+  - deploy
+
+#########
+# Build #
+#########
+
 buildnios:
   stage: build
   variables:
   script:
-  - echo "build nios Mouvent Printer"
+  - echo "(Nios) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
-  only:
-  - pushes
-  
+
 buildkeil:
   stage: build
   variables:
   script:
-  - echo "build keil Mouvent Printer"
+  - echo "(Keil) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
   - automated_build/msbuild_vsprojects.bat keil -no-pause
-  only:
-  - pushes
-  
+
 buildother:
   stage: build
   variables:
   script:
-  - echo "build other Mouvent Printer"
+  - echo "(Other) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
   - automated_build/msbuild_vsprojects.bat other -no-pause
-  only:
-  - pushes
 
+#############
+# Artifacts #
+#############
 
+createartifacts:
+  stage: artifacts
+  variables:
+  script:
+  - echo "Create artifacts"
+  artifacts:
+    when: always
+    expire_in: 1 month
+    name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
+  paths:
+   - bin/*
+   - automated_build/log/*
+
+##########
+# Deploy #
+##########
+deploying:
+ stage: deploy
+ when: on_success
+ variables:
+  GIT_STRATEGY: none
+  TARGETPATH: C:\Users\mouvent\RADEX AG\RX-Project - Documents
+ script:
+  - $DATESTR=get-date -format "yyyyMMdd-HHmm"
+  - if (${CI_COMMIT_TAG} -And ${CI_COMMIT_TAG}[0] -eq 'v')
+    {
+      $COMMIT_TYPE='release\' + ${CI_COMMIT_TAG}
+    }
+    elseif ($BUILDNAME -eq "nightly")
+    {
+      $COMMIT_TYPE='nightly-builds\' + ${DATESTR} + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
+    }
+    else
+    {
+      $COMMIT_TYPE='commits\' + ${DATESTR} + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
+    }
+  - echo "deploying bin to ${TARGETPATH}\${COMMIT_TYPE}.zip"
+  - 7z.exe a ${TARGETPATH}\${COMMIT_TYPE}.zip bin
+ #  - xcopy /E /Y /F bin ${TARGETPATH}\${COMMIT_TYPE}\bin\
+ #  - Remove-Item ..\* -Recurse -Force
 
 
 
