--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -1,6 +1,5 @@
 stages:
   - build
-  - artifacts
   - deploy
 
 #########
@@ -13,6 +12,13 @@ buildnios:
   script:
   - echo "(Nios) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
+  artifacts:
+    when: always
+    expire_in: 1 month
+    name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
+    paths:
+     - bin/*
+     - automated_build/log/*
 
 buildkeil:
   stage: build
@@ -20,6 +26,13 @@ buildkeil:
   script:
   - echo "(Keil) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
   - automated_build/msbuild_vsprojects.bat keil -no-pause
+  artifacts:
+    when: always
+    expire_in: 1 month
+    name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
+    paths:
+     - bin/*
+     - automated_build/log/*
 
 buildother:
   stage: build
@@ -27,6 +40,13 @@ buildother:
   script:
   - echo "(Other) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
   - automated_build/msbuild_vsprojects.bat other -no-pause
+  artifacts:
+    when: always
+    expire_in: 1 month
+    name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
+    paths:
+     - bin/*
+     - automated_build/log/*
 
 #############
 # Artifacts #
@@ -55,27 +75,27 @@ deploying:
    GIT_STRATEGY: none
    TARGETPATH: C:\Users\mouvent\RADEX AG\RX-Project - Documents
  before_script:
-    - for /F "tokens=*" %%i IN ('powershell Get-Date -Format yyyy.MM.dd.HHmmss') DO SET DATESTR=%%i
+    - FOR /F "tokens=*" %%i IN ('powershell Get-Date -Format yyyy.MM.dd.HHmmss') DO SET DATESTR=%%i
     - echo "The current date is %DATESTR%"
  script:
    - echo %DATESTR%
   #- $DATESTR=get-date -format "yyyyMMdd-HHmm"
-  # - if (${CI_COMMIT_TAG} -And ${CI_COMMIT_TAG}[0] -eq 'v')
-  #   {
-  #     $COMMIT_TYPE='release\' + ${CI_COMMIT_TAG}
-  #   }
-  #   elseif ($BUILDNAME -eq "nightly")
-  #   {
-  #     $COMMIT_TYPE='nightly-builds\' + ${DATESTR} + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
-  #   }
-  #   else
-  #   {
-  #     $COMMIT_TYPE='commits\' + ${DATESTR} + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
-  #   }
-  # - echo "deploying bin to ${TARGETPATH}\${COMMIT_TYPE}.zip"
-  # - 7z.exe a ${TARGETPATH}\${COMMIT_TYPE}.zip bin
- #  - xcopy /E /Y /F bin ${TARGETPATH}\${COMMIT_TYPE}\bin\
- #  - Remove-Item ..\* -Recurse -Force
+  - if (${CI_COMMIT_TAG} -And ${CI_COMMIT_TAG}[0] -eq 'v')
+    {
+      $COMMIT_TYPE='release\' + ${CI_COMMIT_TAG}
+    }
+    elseif ($BUILDNAME -eq "nightly")
+    {
+      $COMMIT_TYPE='nightly-builds\' + %DATESTR% + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
+    }
+    else
+    {
+      $COMMIT_TYPE='commits\' + %DATESTR% + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
+    }
+  - echo "deploying bin to ${TARGETPATH}\${COMMIT_TYPE}.zip"
+  - 7z.exe a ${TARGETPATH}\${COMMIT_TYPE}.zip bin
+  - xcopy /E /Y /F bin ${TARGETPATH}\${COMMIT_TYPE}\bin\
+  - Remove-Item ..\* -Recurse -Force
 
 
 
