--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -52,18 +52,18 @@ buildother:
 # Artifacts #
 #############
 
-createartifacts:
-  stage: artifacts
-  variables:
-  script:
-  - echo "Create artifacts"
-  artifacts:
-    when: always
-    expire_in: 1 month
-    name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
-    paths:
-     - bin/*
-     - automated_build/log/*
+# createartifacts:
+#   stage: artifacts
+#   variables:
+#   script:
+#   - echo "Create artifacts"
+#   artifacts:
+#     when: always
+#     expire_in: 1 month
+#     name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
+#     paths:
+#      - bin/*
+#      - automated_build/log/*
 
 ##########
 # Deploy #
