--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -10,12 +10,12 @@ buildnios:
   stage: build
   variables:
   script:
-  - echo "(Nios) Building git branch "${CI_COMMIT_REF_NAME}" at commit "${CI_COMMIT_SHA}" short ${CI_COMMIT_SHA}.Substring(0,8)"
+  - echo "(Nios) Building git branch "$CI_COMMIT_REF_NAME" at commit "$CI_COMMIT_SHA" short ${CI_COMMIT_SHORT_SHA}"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
   artifacts:
     when: always
     expire_in: 1 month
-    name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
+    name: "$CI_COMMIT_REF_SLUG_$CI_COMMIT_SHA"
     paths:
      - bin/*
      - automated_build/log/*
@@ -48,23 +48,6 @@ buildother:
      - bin/*
      - automated_build/log/*
 
-#############
-# Artifacts #
-#############
-
-# createartifacts:
-#   stage: artifacts
-#   variables:
-#   script:
-#   - echo "Create artifacts"
-#   artifacts:
-#     when: always
-#     expire_in: 1 month
-#     name: "${CI_COMMIT_REF_SLUG}_${CI_COMMIT_SHA}"
-#     paths:
-#      - bin/*
-#      - automated_build/log/*
-
 ##########
 # Deploy #
 ##########
@@ -80,20 +63,20 @@ deploying:
  script:
    - echo %DATESTR%
   #- $DATESTR=get-date -format "yyyyMMdd-HHmm"
-   - if (${CI_COMMIT_TAG} -And ${CI_COMMIT_TAG}[0] -eq 'v')
-     {
-       $COMMIT_TYPE='release\' + ${CI_COMMIT_TAG}
-     }
-     elseif ($BUILDNAME -eq "nightly")
-     {
-       $COMMIT_TYPE='nightly-builds\' + %DATESTR% + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
-     }
-     else
-     {
-       $COMMIT_TYPE='commits\' + %DATESTR% + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
-     }
-   - echo "deploying bin to ${TARGETPATH}\${COMMIT_TYPE}.zip"
-   - 7z.exe a ${TARGETPATH}\${COMMIT_TYPE}.zip bin
+  #  - if (${CI_COMMIT_TAG} -And ${CI_COMMIT_TAG}[0] -eq 'v')
+  #    {
+  #      $COMMIT_TYPE='release\' + ${CI_COMMIT_TAG}
+  #    }
+  #    elseif ($BUILDNAME -eq "nightly")
+  #    {
+  #      $COMMIT_TYPE='nightly-builds\' + %DATESTR% + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
+  #    }
+  #    else
+  #    {
+  #      $COMMIT_TYPE='commits\' + %DATESTR% + '_' + ${CI_COMMIT_REF_SLUG} + '_' + ${CI_COMMIT_SHA}
+  #    }
+  #  - echo "deploying bin to ${TARGETPATH}\${COMMIT_TYPE}.zip"
+  #  - 7z.exe a ${TARGETPATH}\${COMMIT_TYPE}.zip bin
   #  - xcopy /E /Y /F bin ${TARGETPATH}\${COMMIT_TYPE}\bin\
   #  - Remove-Item ..\* -Recurse -Force
 
