--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -10,12 +10,12 @@ buildnios:
   stage: build
   variables:
   script:
-  - echo "(Nios) Building git branch "$CI_COMMIT_REF_NAME" at commit "$CI_COMMIT_SHA" short ${CI_COMMIT_SHORT_SHA}"
+  - echo "(Nios) Building git branch "%CI_COMMIT_REF_NAME%" at commit "%CI_COMMIT_SHA%" short %CI_COMMIT_SHORT_SHA%"
   - automated_build/msbuild_vsprojects.bat nios -no-pause
   artifacts:
     when: always
     expire_in: 1 month
-    name: "$CI_COMMIT_REF_SLUG_$CI_COMMIT_SHA"
+    name: "%CI_COMMIT_REF_SLUG%_%CI_COMMIT_SHA%"
     paths:
      - bin/*
      - automated_build/log/*
