--- a/automated_build/.gitlab-ci.yml
+++ b/automated_build/.gitlab-ci.yml
@@ -61,7 +61,7 @@ deploying:
     - for /F "tokens=*" %%i in ('powershell Get-Date -Format yyyy.MM.dd.HHmmss') do set DATESTR=%%i
     - echo "The current date is %DATESTR%"
  script:
-   - powershell -noprofile -noninteractive -executionpolicy Bypass -command "& 'deploy_mouventprinter.ps1'" -targetpath %TARGETPATH% -committag %CI_COMMIT_TAG% -buildname %BUILDNAME% -commitrefslug %CI_COMMIT_REF_SLUG% -commitsha %CI_COMMIT_SHA%
+   - powershell -noprofile -noninteractive -executionpolicy Bypass -command "& '.\deploy_mouventprinter.ps1'" -targetpath %TARGETPATH% -committag %CI_COMMIT_TAG% -buildname %BUILDNAME% -commitrefslug %CI_COMMIT_REF_SLUG% -commitsha %CI_COMMIT_SHA%
 
 
 
