--- a/rx_main_ctrl/rx_main_ctrl.vcxproj.filters
+++ b/rx_main_ctrl/rx_main_ctrl.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="prod_log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="step_dp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="boot_svr.c">
@@ -261,6 +264,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="prod_log.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="step_dp.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
