--- a/rx_main_ctrl/rx_main_ctrl.vcxproj
+++ b/rx_main_ctrl/rx_main_ctrl.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="step_std.h" />
     <ClInclude Include="step_test.h" />
     <ClInclude Include="step_tx.h" />
+    <ClInclude Include="tcp_ip_bobst.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\rx_ink_lib\rx_ink_common.c" />
