--- a/.gitattributes
+++ b/.gitattributes
@@ -2,4 +2,4 @@ rx_stepper_rbf binary
 rx_headtemp_rbf binary
 rx_head_rbf binary
 rx_fluid_rbf binary
-rx_encoder_rbf_ binary
+rx_encoder_rbf binary
