--- a/rx_digiprint_gui/rx_digiprint_gui.csproj
+++ b/rx_digiprint_gui/rx_digiprint_gui.csproj
@@ -1383,6 +1383,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\Bitmaps\RunList.png" />
     <Resource Include="Resources\Bitmaps\LH702\LH702.jpg" />
     <Resource Include="Resources\Bitmaps\UV_Lamp_OFF.ico" />
     <Resource Include="Resources\Bitmaps\LB702\LB702_WB.png" />
