handle also *.sln, *.csproj and *.vcxproj files as "binary"

--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,6 @@ rx_head_rbf binary
 rx_fluid_rbf binary
 rx_encoder_rbf binary
 *.suo binary
+*.sln -merge -text
+*.csproj -merge -text
+*.vcxproj -merge -text
