mag_8710 code: GUI: several improvements LH702: JobChange with encoder in markreading mode LH702: Virtual PG_MODE_MARK_VRT Stepper: smaller changes (prepare for merge)

--- a/rx_digiprint_gui/rx_digiprint_gui.csproj
+++ b/rx_digiprint_gui/rx_digiprint_gui.csproj
@@ -132,7 +132,8 @@
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <UseVSHostingProcess>false</UseVSHostingProcess>
-    <DocumentationFile>RX_DigiPrint.XML</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
@@ -1383,6 +1384,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Resource Include="Resources\Bitmaps\PG_Mark_Virtual.ico" />
     <Resource Include="Resources\Bitmaps\RunList.png" />
     <Resource Include="Resources\Bitmaps\LH702\LH702.jpg" />
     <Resource Include="Resources\Bitmaps\UV_Lamp_OFF.ico" />
