prepend slash for all files

--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,61 @@
-bin/encoder/rx_encoder_ctrl
-bin/fluid/rx_fluid_ctrl
-bin/fluid/rx_fluid_nios
-bin/gui/rx_common_lib_cs.dll
-bin/gui/RX_DigiPrint.exe
-bin/gui/rx_rip_lib.dll
-bin/head/rx_head_cond
-bin/head/rx_head_ctrl
-bin/head/rx_head_nios
-bin/main/rx_dhcp_server
-bin/main/rx_main_ctrl
-bin/rx_boot_lx
-bin/rx_boot_soc
-bin/spooler/rx_spooler_ctrl
-bin/stepper/rx_stepper_ctrl
-bin/win/rx_main_ctrl.exe
-bin/win/rx_rip_lib.dll
-bin/win/rx_spooler_ctrl.exe
-bin/win10/ndisapi.dll
-bin/win10/rx_net_bridge.exe
-bin/win10/rx_route.exe
-bin/win10/Win10-Install.exe
-bin/win10/Win10-RunOnce.exe
-bin/win10/Win10-Startup.exe
-rx_encoder_ctrl/fpga_def_enc.h.bak
-rx_encoder_ctrl/version.c
-rx_encoder_ctrl/version.txt
-rx_fluid_ctrl/version.c
-rx_fluid_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
-rx_fluid_nios/software/rx_fluid_nios/mem_init/fluid_board_soc_onchip_memory_nios_cpu.hex
-rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_arm.sym
-rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_cpu.dat
-rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_cpu.sym
-rx_fluid_nios/software/rx_fluid_nios/rx_fluid_nios.elf
-rx_fluid_nios/software/rx_fluid_nios/rx_fluid_nios.map
-rx_fluid_nios/software/rx_fluid_nios/version.c
-rx_fluid_nios/software/rx_fluid_nios/version.txt
-rx_fluid_nios/software/rx_fluid_nios_bsp/settings.bsp
-rx_fluid_nios/software/rx_fluid_nios_bsp/summary.html
-rx_head_cond/build.log
-rx_head_cond/source/version.c
-rx_head_cond/source/version.txt
-rx_head_ctrl/version.c
-rx_head_ctrl/version.txt
-rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.core/rx_head_nios.language.settings.xml
-rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/dialog_settings.xml
-rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
-rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios/.indexes/properties.index
-rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios/.markers
-rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios_bsp/.indexes/properties.index
-rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
-rx_head_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
-rx_head_nios/software/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/dialog_settings.xml
-rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_dp_ram_nios_arm.sym
-rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_onchip_memory_nios_cpu.dat
-rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_onchip_memory_nios_cpu.sym
-rx_head_nios/software/rx_head_nios_bsp/settings.bsp
-rx_head_nios/software/rx_head_nios_bsp/summary.html
-rx_main_ctrl/version.c
-rx_spooler_ctrl/version.c
-rx_stepper_ctrl/version.c
+/bin/encoder/rx_encoder_ctrl
+/bin/fluid/rx_fluid_ctrl
+/bin/fluid/rx_fluid_nios
+/bin/gui/rx_common_lib_cs.dll
+/bin/gui/RX_DigiPrint.exe
+/bin/gui/rx_rip_lib.dll
+/bin/head/rx_head_cond
+/bin/head/rx_head_ctrl
+/bin/head/rx_head_nios
+/bin/main/rx_dhcp_server
+/bin/main/rx_main_ctrl
+/bin/rx_boot_lx
+/bin/rx_boot_soc
+/bin/spooler/rx_spooler_ctrl
+/bin/stepper/rx_stepper_ctrl
+/bin/win/rx_main_ctrl.exe
+/bin/win/rx_rip_lib.dll
+/bin/win/rx_spooler_ctrl.exe
+/bin/win10/ndisapi.dll
+/bin/win10/rx_net_bridge.exe
+/bin/win10/rx_route.exe
+/bin/win10/Win10-Install.exe
+/bin/win10/Win10-RunOnce.exe
+/bin/win10/Win10-Startup.exe
+/rx_encoder_ctrl/fpga_def_enc.h.bak
+/rx_encoder_ctrl/version.c
+/rx_encoder_ctrl/version.txt
+/rx_fluid_ctrl/version.c
+/rx_fluid_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+/rx_fluid_nios/software/rx_fluid_nios/mem_init/fluid_board_soc_onchip_memory_nios_cpu.hex
+/rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_arm.sym
+/rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_cpu.dat
+/rx_fluid_nios/software/rx_fluid_nios/mem_init/hdl_sim/fluid_board_soc_onchip_memory_nios_cpu.sym
+/rx_fluid_nios/software/rx_fluid_nios/rx_fluid_nios.elf
+/rx_fluid_nios/software/rx_fluid_nios/rx_fluid_nios.map
+/rx_fluid_nios/software/rx_fluid_nios/version.c
+/rx_fluid_nios/software/rx_fluid_nios/version.txt
+/rx_fluid_nios/software/rx_fluid_nios_bsp/settings.bsp
+/rx_fluid_nios/software/rx_fluid_nios_bsp/summary.html
+/rx_head_cond/build.log
+/rx_head_cond/source/version.c
+/rx_head_cond/source/version.txt
+/rx_head_ctrl/version.c
+/rx_head_ctrl/version.txt
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.core/rx_head_nios.language.settings.xml
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/dialog_settings.xml
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios/.indexes/properties.index
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios/.markers
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.projects/rx_head_nios_bsp/.indexes/properties.index
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.ide.prefs
+/rx_head_nios/software/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/dialog_settings.xml
+/rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_dp_ram_nios_arm.sym
+/rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_onchip_memory_nios_cpu.dat
+/rx_head_nios/software/rx_head_nios/mem_init/hdl_sim/soc_system_onchip_memory_nios_cpu.sym
+/rx_head_nios/software/rx_head_nios_bsp/settings.bsp
+/rx_head_nios/software/rx_head_nios_bsp/summary.html
+/rx_main_ctrl/version.c
+/rx_spooler_ctrl/version.c
+/rx_stepper_ctrl/version.c
