--- a/rx_digiprint_app/rx_digiprint_app/rx_digiprint_app.Droid/rx_digiprint_app.Droid.csproj
+++ b/rx_digiprint_app/rx_digiprint_app/rx_digiprint_app.Droid/rx_digiprint_app.Droid.csproj
@@ -41,6 +41,8 @@
     <EnableLLVM>false</EnableLLVM>
     <BundleAssemblies>false</BundleAssemblies>
     <PlatformTarget>x86</PlatformTarget>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <AndroidSupportedAbis>x86;x86_64;arm64-v8a</AndroidSupportedAbis>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
