mag_8785 code: Changed project settings to VS2019  - Visual Studio Professional 2019 (Version 16.4.2)  - VisuabGDB (Version 5.4R12 biuld 3309)

--- a/rx_head_cond/rx_head_cond.vcxproj
+++ b/rx_head_cond/rx_head_cond.vcxproj
@@ -70,12 +70,16 @@
     <LibraryPath />
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <NMakeForcedIncludes>$(ProjectDir)\gcc_Release.h;$(VISUALGDB_DIR)\gcc_compat.h;$(NMakeForcedIncludes)</NMakeForcedIncludes>
-    <NMakePreprocessorDefinitions>__VisualGDB_CFG_Release;$(NMakePreprocessorDefinitions)</NMakePreprocessorDefinitions>
-    <NMakeBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /build "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeBuildCommandLine>
-    <NMakeCleanCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /clean "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeCleanCommandLine>
-    <NMakeReBuildCommandLine>"$(VISUALGDB_DIR)\VisualGDB.exe" /rebuild "$(ProjectPath)" "/solution:$(SolutionPath)" "/config:$(Configuration)" "/platform:$(Platform)"</NMakeReBuildCommandLine>
-    <NMakeOutput>$(ProjectDir)rx_head_cond-Release.vgdbsettings</NMakeOutput>
+    <NMakeForcedIncludes>
+    </NMakeForcedIncludes>
+    <NMakePreprocessorDefinitions>
+    </NMakePreprocessorDefinitions>
+    <NMakeBuildCommandLine>UV4 -b rx_head_cond.uvprojx -t MB9BFxx4_Release -j0 -o build.log</NMakeBuildCommandLine>
+    <NMakeCleanCommandLine>
+    </NMakeCleanCommandLine>
+    <NMakeReBuildCommandLine>UV4 -b rx_head_cond.uvprojx -t MB9BFxx4_Release -j0 -o build.log</NMakeReBuildCommandLine>
+    <NMakeOutput>
+    </NMakeOutput>
     <IncludePath />
     <ReferencePath />
     <LibraryPath />
